# lodestone_cli

./: Cargo.toml  Cross.toml  README.md  example_source.json
.github/workflows/: develop.yml  main.yml  release.yml
src/: main.rs  metadata.json  run_core.rs  uninstall.rs  util.rs  versions.rs
src/installation/: download_release.rs  mod.rs  temp_backup.rs
src/update_launcher/: download_release.rs  manage_backup.rs  mod.rs
src/update_manager/: download.rs  metadata.rs  mod.rs  source.rs  versions.rs
src/version_handler/: get_latest_version.rs  metadata_handler.rs  mod.rs
