[package]
name = "lodestone_launcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
zip = "0.6.4"
dirs = "5.0.0"
anyhow = "1.0"
color-eyre = "0.6.2"
timeout = "0.1.0"
wait-timeout = "0.2.0"
tokio = "1.27.0"
tracing = "0.1.37"
tracing-subscriber = { version="0.3.16", features = ["env-filter"] }
ctrlc = "3.2.5"
