[package]
name = "lodestone_cli"
version = "1.0.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json","stream", "native-tls-vendored"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
dirs = "5.0.0"
color-eyre = "0.6.2"
ctrlc = "3.2.5"
tokio = { version = "1.27.0", features = ["full"] }
semver = {version = "1.0.17", features = ["serde"]}
clap = { version = "4.2.7", features = ["derive"] }
ansi_term = "0.12.1"
indicatif = "0.17.3"
futures-util = "0.3.28"
tempfile = "3.5.0"
self_update = "0.37.0"
